--- a/src/containers/Todo.scss
+++ b/src/containers/Todo.scss
@@ -1,13 +1,4 @@
-$black-0: #000;
-$black-1:#333;
-$gold: #CA8F48;
-$light-gray: #E5E5E5;
-$bg-card: #f6f6f6;
-$red: #EB5757;
-
-$size-lg: 991px;
-$size-md: 768px;
-$size-sm: 576px;
+@import '../Variables.scss';
 
 .todo{
   // width: 100%;
@@ -47,100 +38,22 @@ $size-sm: 576px;
   border-radius: 4px;
   background-color: #EBECF0;
 }
+.todo__card__title{
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 0 8px 8px;
+}
 
 .todo__list{
   list-style: none;
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
 }
 
-.todo__item{
-  width: 100%;
-  padding: 6px 8px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 8px;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #fff;
-  position: relative;
-
-  &:hover{
-    background-color: #f4f5f7;
-  }
-}
-
-.item__main{
-  display: flex;
-  position: relative;
-  background-color: yellow;
-}
-
-.item__task{
-  width: 100%;
-  word-break: break-all;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  // height: 100%;
-  font-size: 14px;
-  line-height: 20px;
-  background-color: aquamarine;
-}
-.item__task--hidden{
-  display: none;
-}
-.item__task--done{
-  text-decoration-line: line-through;
-}
-
-.item__dropdown{
-  position: relative;
-  border: none;
-  cursor: pointer;
-  background-color: $light-gray;
-}
-
-.item__edit-modal{
-  z-index: 1;
-  position: absolute;
-  // width: 100%;
-  background-color: lawngreen;
-}
-.item__edit-input{
-  width: 100%;
-  border: none;
-  outline: none;
-  resize: none;
-  min-height: 60px;
-  // background-color: #eee;
-  background-color: #fff;
-}
-
-.todo__btn--primary, .todo__btn--secondary{
-  width: fit-content;
-  padding: 4px 12px;
-  border: none;
-  cursor: pointer;
-}
-.todo__btn--primary{
-  background-color: $gold;
-  color: white;
-  margin-right: 8px;
-  &:hover{
-    background-color: #c78637;
-  }
-}
-.todo__btn--secondary{
-  background-color: transparent;
-  &:hover{
-    background-color: #eaeaea;
-  }
-}
-
-.dropdown__icon{
-  display: flex;
-}
+// .dropdown__icon{
+//   display: flex;
+// }
 
 .dropdown__menu{
   display: flex;
@@ -149,19 +62,30 @@ $size-sm: 576px;
   color: white;
   row-gap: 4px;
   font-size: 14px;
-  z-index: 2;
+  z-index: -1;
   padding-left: 8px;
 
   position: absolute;
-  top: 0;
-  right: 0;
-  transform: translateX(100%);
+  left: 100%;
 }
+
+// Animasi untuk dropdown dari CSSTransition
+.fade-appear {
+  opacity: 0;
+  transform: translateX(-30%);
+}
+.fade-appear-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 300ms;
+}
+
 .dropdown__item{
   width: fit-content;
   padding: 6px 12px;
   border-radius: 4px;
   transition: 85ms ease-in;
+  cursor: pointer;
   background-color: rgba(0, 0, 0, .6);
 
   &:hover{
@@ -170,16 +94,31 @@ $size-sm: 576px;
   }
 }
 
-.todo__add{
+// .todo__add{
+  
+// }
+.todo__add__open{
+  padding: 4px 8px;
   cursor: pointer;
-  padding: 8px;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  transition: 85ms ease-in;
+  color: #5e6c84;
   &:hover{
-    background-color: #dcdde0;
+    // background-color: #dcdde0;
+    background-color: rgba(9,30,66,.08);
   }
 }
+.todo__add__form{
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
 
-.add__input{
-  width: 100%;
+.todo__add__input{
+  // width: 100%;
   padding: 8px;
   border: none;
   outline: none;
