--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -1,4 +1,8 @@
-$black-0: #000;
+$text-primary: #172b4d;
+$text-secondary: #5e6c84;
+$icon-1: #6b778c;
+
+
 $black-1:#333;
 $gold: #CA8F48;
 $light-gray: #E5E5E5;
