--- a/src/containers/Todo.scss
+++ b/src/containers/Todo.scss
@@ -16,13 +16,13 @@
 }
 
 .todo__canvas{
-  // width: 100vw;
   white-space: nowrap; //agar bisa horizontal scroll
   padding: 0 4px;
   column-gap: 8px;
   flex-grow: 1;
   overflow-x: auto;
   overflow-y: hidden;
+  // vertical-align: top;
   background-color: darkkhaki;
 }
 
@@ -34,6 +34,7 @@
   display: inline-flex;
   flex-direction: column;
   margin: 0 4px;
+  vertical-align: top;
   // row-gap: 8px;
   border-radius: 4px;
   background-color: #EBECF0;
@@ -50,10 +51,6 @@
   display: flex;
   flex-direction: column;
 }
-
-// .dropdown__icon{
-//   display: flex;
-// }
 
 .dropdown__menu{
   display: flex;
@@ -92,35 +89,4 @@
     transform: translateX(5px);
     background-color: rgba(0, 0, 0, .8);
   }
-}
-
-// .todo__add{
-  
-// }
-.todo__add__open{
-  padding: 4px 8px;
-  cursor: pointer;
-  border-radius: 4px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  transition: 85ms ease-in;
-  color: #5e6c84;
-  &:hover{
-    // background-color: #dcdde0;
-    background-color: rgba(9,30,66,.08);
-  }
-}
-.todo__add__form{
-  display: flex;
-  flex-direction: column;
-  row-gap: 8px;
-}
-
-.todo__add__input{
-  // width: 100%;
-  padding: 8px;
-  border: none;
-  outline: none;
-  margin-bottom: 8px;
 }
