--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './Variables.scss';
+
 *{
   margin: 0;
   padding: 0;
@@ -24,4 +26,15 @@ a{
 
 .hidden{
   display: none;
+}
+
+input{
+  color: $text-primary;
+  outline: none;
+  border: none;
+  font: 400 14px 'Public Sans', sans-serif;
+  line-height: 20px;
+}
+input::placeholder{
+  font-size: 13px;
 }
