--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -20,25 +20,41 @@
 
 .todo__canvas{
   white-space: nowrap; //agar bisa horizontal scroll
-  padding: 0 4px;
+  padding: 0 4px 8px;
+  margin-bottom: 8px;
   column-gap: 8px;
   flex-grow: 1;
   overflow-x: auto;
   overflow-y: hidden;
-  // vertical-align: top;
   background-color: darkkhaki;
+}
+.todo__canvas::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+}
+.todo__canvas::-webkit-scrollbar-button {
+  display: block;
+  height: 4px;
+  width: 4px;
+}
+.todo__canvas::-webkit-scrollbar-track-piece {
+  border-radius: 4px;
+  background: rgba(0,0,0,.15);
+}
+.todo__canvas::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
 }
 
 .todo__list{
   white-space: normal;
   width: 272px;
-  height: fit-content;
-  padding: 8px;
+  max-height: 100%;
+  // padding: 8px;
   display: inline-flex;
   flex-direction: column;
   margin: 0 4px;
   vertical-align: top;
-  // row-gap: 8px;
   border-radius: 4px;
   background-color: #EBECF0;
 }
@@ -46,13 +62,28 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
-  padding: 0 8px 8px;
+  padding: 10px 8px;
 }
 
 .todo__card{
+  min-height: 0;
+  padding: 0 4px;
+  margin: 0 4px;
   list-style: none;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+}
+.todo__card::-webkit-scrollbar {
+  width: 8px;
+}
+.todo__card::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: rgba(9,30,66,.08);
+}
+.todo__card::-webkit-scrollbar-thumb {
+  background-color: rgba(9,30,66,.13);
+  border-radius: 4px;
 }
 
 .dropdown__menu{
