--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -1,6 +1,6 @@
 @import '../../Variables.scss';
 
-.dropdown__menu{
+.menu-list{
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -14,10 +14,13 @@
   left: 100%;
 }
 
-.dropdown__item{
+.menu-list__item, .menu-list__item--move{
   width: fit-content;
   white-space: nowrap;
-  padding: 6px 12px;
+  padding: 6px 12px 6px 8px;
+  display: flex;
+  align-items: center;
+  column-gap: 4px;
   border-radius: 4px;
   cursor: pointer;
   transition: 85ms ease-in;
@@ -28,6 +31,21 @@
     background-color: rgba(0, 0, 0, .8);
   }
 }
+.menu-list__item--move{
+  margin-left: 16px;
+}
+
+.menu-list__icon-wrapper{
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-list__icon{
+  width: 16px;
+  fill: #fff;
+}
 
 // Animasi untuk dropdown dari CSSTransition
 .fade-appear {
@@ -35,6 +53,16 @@
   transform: translateX(-30%);
 }
 .fade-appear-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 300ms;
+}
+
+.menu-fade-appear {
+  opacity: 0;
+  transform: translateX(-30%);
+}
+.menu-fade-appear-active {
   opacity: 1;
   transform: translateX(0);
   transition: all 300ms;
