--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -36,14 +36,14 @@
 }
 
 .menu-list__icon-wrapper{
-  width: 20px;
-  height: 20px;
+  padding: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .menu-list__icon{
   width: 16px;
+  height: 16px;
   fill: #fff;
 }
 
@@ -65,5 +65,5 @@
 .menu-fade-appear-active {
   opacity: 1;
   transform: translateX(0);
-  transition: all 300ms;
+  transition: all 300ms ease-out;
 }
