add actions features in list header

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,8 @@ input::placeholder{
 }
 
 button{
+  font: 400 14px 'Public Sans', sans-serif;
+  line-height: 20px;
   background-color: transparent;
   border: none;
   cursor: pointer;
