--- a/src/components/ListHeader/ListHeader.scss
+++ b/src/components/ListHeader/ListHeader.scss
@@ -1,3 +1,5 @@
+@import '../../Variables.scss';
+
 .list-header{
   display: flex;
   justify-content: space-between;
@@ -43,12 +45,63 @@
   height: 16px;
 }
 
-.pop-header{
+.pop-over{
   width: 304px;
-  height: 40px;
+  border-radius: 4px;
   background-color: white;
   position: absolute;
-  // right: 0;
-  left: 250px;
+  top: 40px;
+  left: 236px;
   z-index: 1;
+  box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+}
+.pop-over__header{
+  margin-bottom: 8px;
+  position: relative;
+  text-align: center;
+}
+.pop-over__header__title{
+  line-height: 38px;
+  display: block;
+  margin: 0 12px;
+  font-size: 14px;
+  color: $text-secondary;
+  border-bottom: 1px solid rgba(9,30,66,.13);
+}
+.pop-over__header__close{
+  display: flex;
+  padding: 10px 12px 10px 8px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.pop-over__header__close svg{
+  width: 18px;
+  height: 18px;
+}
+.pop-over__content{
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0 12px 12px;
+}
+.pop-over__list{
+  list-style: none;
+}
+.pop-over__list:not(:last-child){
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+  border-bottom: 1px solid rgba(9,30,66,.13);
+}
+
+.pop-over__item{
+  color: $text-primary;
+  padding: 6px 12px;
+  margin: 0 -12px;
+
+  width: 304px;
+  text-align: left;
+
+  &:hover{
+    background-color: rgba(9,30,66,.04);
+  }
 }
