--- a/src/App.scss
+++ b/src/App.scss
@@ -15,19 +15,6 @@ a{
   color: var(--black-1);
 }
 
-.main__container{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  /* background-color: aqua; */
-}
-
-.hidden{
-  display: none;
-}
-
 input{
   color: $text-primary;
   outline: none;
@@ -45,4 +32,41 @@ button{
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.main__container{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.credits{
+  font-size: 14px;
+  letter-spacing: .5px;
+  color: rgba($color: #fff, $alpha: .5);
+}
+.credits__link:hover{
+  text-decoration-line: underline;
+  color: #fff
+}
+
+.hidden{
+  display: none;
+}
+
+.close__icon{
+  stroke: $icon-1;
+  transition: 85ms ease-in;
+  
+  &:hover{
+    stroke: $text-primary;
+  }
+}
+.plus__icon{
+  stroke: $icon-1;
+}
+.plus__icon--white{
+  stroke: #fff;
 }
