--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: all .3s ease-in;
+  transition: all 200ms ease-in;
 }
 
 .btn--primary{
