--- a/src/App.scss
+++ b/src/App.scss
@@ -65,3 +65,33 @@ button{
 .plus__icon--white{
   stroke: #fff;
 }
+
+.theme{
+  &--blue{
+    background-color: rgb(0, 121, 191);
+  }
+  &--orange{
+    background-color: rgb(210, 144, 52);
+  }
+  &--green{
+    background-color: rgb(81, 152, 57);
+  }
+  &--red{
+    background-color: rgb(176, 70, 50);
+  }
+  &--purple{
+    background-color: rgb(137, 96, 158);
+  }
+  &--pink{
+    background-color: rgb(205, 90, 145);
+  }
+  &--green-light{
+    background-color: rgb(75, 191, 107);
+  }
+  &--blue-light{
+    background-color: rgb(0, 174, 204);
+  }
+  &--gray{
+    background-color: rgb(131, 140, 145);
+  }
+}
