--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(0, 121, 191);
+  // background-color: rgb(0, 121, 191);
 }
 
 .todo__header{
@@ -20,9 +20,9 @@
 }
 .todo__header__name{
   width: fit-content;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
-  line-height: 36px;
+  line-height: 32px;
   padding: 0 16px;
   border-radius: 4px;
   color: #fff;
@@ -38,6 +38,25 @@
   font-size: 14px;
   letter-spacing: .5px;
   color: rgba($color: #fff, $alpha: .5);
+}
+.todo__header__menu{
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+  padding: 6px;
+  color: #fff;
+  border-radius: 4px;
+  transition: 85ms ease-in;
+  background-color: rgba($color: #fff, $alpha: 0.24);
+
+  &:hover{
+    background-color: rgba($color: #fff, $alpha: 0.32);
+  }
+}
+.todo__header__menu__icon{
+  width: 16px;
+  height: 16px;
+  fill: #fff;
 }
 
 .todo__canvas{
@@ -90,14 +109,14 @@
   flex-direction: column;
   overflow-y: auto;
 }
-.todo__card::-webkit-scrollbar {
+.todo__card::-webkit-scrollbar, .change-bg__content::-webkit-scrollbar {
   width: 8px;
 }
-.todo__card::-webkit-scrollbar-track {
+.todo__card::-webkit-scrollbar-track, .change-bg__content::-webkit-scrollbar-track {
   border-radius: 4px;
   background: rgba(9,30,66,.08);
 }
-.todo__card::-webkit-scrollbar-thumb {
+.todo__card::-webkit-scrollbar-thumb, .change-bg__content::-webkit-scrollbar-thumb {
   background-color: rgba(9,30,66,.13);
   border-radius: 4px;
 }
