--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -57,6 +57,11 @@
   width: 16px;
   height: 16px;
   fill: #fff;
+
+  @media (max-width: 500px){
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .todo__canvas{
