--- a/src/Provider/snackbar-provider.module.scss
+++ b/src/Provider/snackbar-provider.module.scss
@@ -2,13 +2,13 @@
 
 .snackbar {
   position: absolute;
-  bottom: 24px;
+  top: 24px;
   left: 50%;
 
   padding: 8px;
   color: white;
   transition: 0.3s ease;
-  transform: translate(-50%, 150%);
+  transform: translate(-50%, -200%);
   opacity: 0;
   z-index: 2;
   font-size: 14px;
