--- a/src/components/MenuCard/MenuCard.scss
+++ b/src/components/MenuCard/MenuCard.scss
@@ -1,6 +1,6 @@
-@import '../../Variables.scss';
+@import "../../Variables.scss";
 
-.menu-list{
+.menu-list {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -14,7 +14,8 @@
   left: 100%;
 }
 
-.menu-list__item, .menu-list__item--move{
+.menu-list__item,
+.menu-list__item--move {
   width: fit-content;
   white-space: nowrap;
   padding: 6px 12px 6px 8px;
@@ -24,46 +25,25 @@
   border-radius: 4px;
   cursor: pointer;
   transition: 85ms ease-in;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0.6);
 
-  &:hover{
+  &:hover {
     transform: translateX(5px);
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, 0.8);
   }
 }
-.menu-list__item--move{
+.menu-list__item--move {
   margin-left: 16px;
 }
 
-.menu-list__icon-wrapper{
+.menu-list__icon-wrapper {
   padding: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.menu-list__icon{
+.menu-list__icon {
   width: 16px;
   height: 16px;
   fill: #fff;
-}
-
-// Animasi untuk dropdown dari CSSTransition
-.fade-appear {
-  opacity: 0;
-  transform: translateX(-30%);
-}
-.fade-appear-active {
-  opacity: 1;
-  transform: translateX(0);
-  transition: all 300ms;
-}
-
-.menu-fade-appear {
-  opacity: 0;
-  transform: translateX(-30%);
-}
-.menu-fade-appear-active {
-  opacity: 1;
-  transform: translateX(0);
-  transition: all 300ms ease-out;
 }
